@@ -545,8 +545,17 @@ public class JavaInspectorImpl implements JavaInspector {
     }
 
     /**
-     * The release the shared {@code java.*} model is built at: the highest any source set states, or {@code 0}
-     * (the running JDK) when none does.
+     * The release the shared {@code java.*} model is built at: the highest release any source set will be PARSED
+     * at, or {@code 0} (the running JDK) when none states one.
+     * <p>
+     * ⛔ <b>A SET THAT STATES NO RELEASE IS PARSED ON THE RUNNING JDK, SO IT COUNTS AS THE RUNNING JDK.</b> The
+     * per-set rule in {@link #createTask}'s release branch is: the set's own release, else the configuration's
+     * global one, else the running JDK. This maximum used to read only the first two, so a configuration mixing
+     * sets at {@code 21} with sets that state nothing (and no global) preloaded at 21 while the silent sets were
+     * attributed at the running JDK's band — the superset property below, broken by exactly the sets that said
+     * nothing. That shape arises as soon as {@code CompileListToInputConfiguration#setSourceRelease} declines to
+     * make a global out of a partial vote (the jfocus/maddi workspace: 4 of 90 invocations at
+     * {@code --release 21}, 86 compiled against the build's JDK), and a build plugin can hand it over directly.
      * <p>
      * ⛔ <b>THE MAXIMUM, NOT THE RUNNING JDK.</b> Both satisfy the superset property that {@link #preloadPass}
      * needs — either is ≥ every band the run will meet, so no set can bring a member the committed type lacks.
@@ -562,8 +571,14 @@ public class JavaInspectorImpl implements JavaInspector {
      */
     private int sharedJdkPreloadRelease() {
         if (inputConfiguration == null) return 0;
-        int max = inputConfiguration.sourceSets().stream().mapToInt(SourceSet::sourceRelease).max().orElse(0);
-        return Math.max(max, inputConfiguration.sourceRelease());
+        int global = inputConfiguration.sourceRelease();
+        int running = java.lang.Runtime.version().feature();
+        // a library set is never attributed from source, so it needs no band of its own
+        int max = inputConfiguration.sourceSets().stream()
+                .filter(set -> !set.library())
+                .mapToInt(set -> set.sourceRelease() > 0 ? set.sourceRelease() : global > 0 ? global : running)
+                .max().orElse(0);
+        return Math.max(max, global);
     }
 
     private void scanSourceSet(Summary summary,
@@ -1298,7 +1313,19 @@ public class JavaInspectorImpl implements JavaInspector {
                 // superset of every band the run will meet, or a later set brings a member the committed type
                 // cannot gain.
                 int configured = sharedJdkPreload ? sharedJdkPreloadRelease() : (perSet > 0 ? perSet : global);
-                if (configured > 0 && configured != running) {
+                if (!sharedJdkPreload && exportsFromSystemModule(sourceSet)) {
+                    // ⛔ javac refuses `--add-exports` of a SYSTEM module under --release ("exporting a package
+                    // from system module ... is not allowed with --release"), so a set whose build opens javac's
+                    // internals cannot have been compiled with one -- and is not parsed with one: against the
+                    // running JDK's modules, as its build was. See addExportsOptions below.
+                    if (configured > 0 && configured != running) {
+                        LOGGER.warn("Source set {} opens packages of a system module (--add-exports) and states"
+                                    + " release {}: javac cannot combine the two, parsing on the running JDK ({})",
+                                sourceSet.name(), configured, running);
+                    }
+                    options.add("--enable-preview");
+                    options.add("--source=" + running);
+                } else if (configured > 0 && configured != running) {
                     options.add("--release=" + configured);
                 } else {
                     options.add("--enable-preview");
@@ -1313,8 +1340,49 @@ public class JavaInspectorImpl implements JavaInspector {
             if (!sourceSet.addModules().isEmpty()) {
                 options.add("--add-modules=" + String.join(",", sourceSet.addModules()));
             }
+            // ...and --add-exports, the set's own, for the same reason: maddi-java-openjdk compiles against javac's
+            // internals with five of them, and without them 8 of its 17 units were dropped. Not on the shared-JDK
+            // preload task, which compiles nothing of the set's and runs under --release; not under jdkInternals,
+            // which already opens every non-exported package of the JDK.
+            if (!sharedJdkPreload && !jdkInternals && !sourceSet.addExports().isEmpty()) {
+                options.addAll(addExportsOptions(sourceSet, ignoreModule || !hasModuleInfo));
+            }
             return (JavacTask) javaCompiler.getTask(null, fm, diagnostics, options, null, allCompilationUnits);
         }
+    }
+
+    /**
+     * Whether the set's {@code --add-exports} open a package of a module the running JDK provides -- the case javac
+     * will not combine with {@code --release}.
+     */
+    private static boolean exportsFromSystemModule(SourceSet sourceSet) {
+        if (sourceSet.addExports().isEmpty()) return false;
+        ModuleFinder system = ModuleFinder.ofSystem();
+        return sourceSet.addExports().stream()
+                .map(export -> export.indexOf('/') > 0 ? export.substring(0, export.indexOf('/')) : "")
+                .anyMatch(module -> !module.isEmpty() && system.find(module).isPresent());
+    }
+
+    /**
+     * The set's own {@code --add-exports}, for this task.
+     * <p>
+     * ⚠ THE TARGET IS THE COMPILATION'S, NOT THE BUILD'S. A build names the module it compiles
+     * ({@code =io.codelaser.maddi.java.openjdk}) and often {@code ALL-UNNAMED} too; a task that compiles into the
+     * unnamed module (ignoreModule, or a set without module-info) is reached only by {@code ALL-UNNAMED}, so there
+     * the package is opened to exactly that. A named compilation keeps the build's own targets.
+     */
+    private static List<String> addExportsOptions(SourceSet sourceSet, boolean unnamed) {
+        List<String> options = new ArrayList<>();
+        for (String export : sourceSet.addExports()) {
+            int eq = export.indexOf('=');
+            if (eq <= 0) {
+                LOGGER.warn("Ignoring malformed --add-exports '{}' of source set {}", export, sourceSet.name());
+                continue;
+            }
+            options.add("--add-exports=" + export.substring(0, eq) + "="
+                        + (unnamed ? "ALL-UNNAMED" : export.substring(eq + 1)));
+        }
+        return options;
     }
 
     // Set javac's compile class path for this source set. With no file dependencies we leave javac's default
@@ -1412,6 +1480,12 @@ public class JavaInspectorImpl implements JavaInspector {
         List<String> missing = new ArrayList<>();
         List<String> stale = new ArrayList<>();
         for (TypeInfo typeInfo : parsed) {
+            // ⛔ A PACKAGE-INFO IS NEVER THE TARGET OF A REFERENCE, so it never has to resolve through a class file —
+            // and javac writes none for a package-info without annotations, nor for a unit that declares no type
+            // (which the parse models as a package-info too). Counted, it claimed dropped units that were not:
+            // Apache Ignite's commented-out GridTcpCommunicationBenchmark.java warned 22 dependent source sets.
+            // By name, not typeNature(): '-' cannot occur in a Java identifier, and the name holds before commit.
+            if ("package-info".equals(typeInfo.simpleName())) continue;
             // a primary type is top-level, so its class file sits at the package path under the output directory
             String path = typeInfo.fullyQualifiedName().replace('.', '/');
             File classFile = new File(dir, path + ".class");
